@@ -21,14 +21,19 @@ fi
 
 # Install Homebrew
 ruby -e "$(curl -fsSkL raw.github.com/mxcl/homebrew/go)"
+
+# set Homebrew bin dirs to come before the system's
+sudo sh -c 'echo "/usr/local/bin\n/usr/local/sbin\n$(cat /etc/paths)" > /etc/paths'
+
+# make sure all is good in the land of Homebrew
 brew doctor
 
 # Install Git, bash completion, and hub (a GitHub tool)
-brew install git bash-completion hub thrift mongodb
+brew install git bash-completion hub mongodb
 
 # replace LLVM gcc for rvm
 brew tap homebrew/dupes
-brew install autoconf automake apple-gcc42
+brew install autoconf automake apple-gcc42 libyaml
 
 # TODO: detect if could not link apple-gcc42 and run...
 # sudo chown root:admin /usr/local/include/
@@ -38,6 +43,8 @@ brew install autoconf automake apple-gcc42
 # Install RVM
 curl -L https://get.rvm.io | bash -s stable --ruby
 source ~/.rvm/scripts/rvm
+# set to auto-install dependencies, will use Homebrew
+rvm autolibs 3
 rvm pkg install openssl
 # OS X workaround
 rvm reinstall all --force
@@ -56,6 +63,12 @@ sudo easy_install Pygments
 
 # Install PEAR
 source install_pear.sh
+
+# Install isocket's custom version of thrift
+source install_isocket-thrift.sh
+
+# Add maven jvm options to .bash_profile to prevent running out of heapspace
+echo export MAVEN_OPTS=\"-Xmx512m -XX:MaxPermSize=128m\" >> ~/.bash_profile
 
 # Install dotfiles (optional)
 echo "Install dotfiles by maxbeatty? (y/n)"
